// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`check correct rendering 1`] = `
<div>
  <div
    class="top-container"
  >
    <input
      class="input"
      placeholder="Start your search"
      value=""
    />
    <button>
       Search 
    </button>
  </div>
   
  <div
    class="pokemon-container"
  >
    <img
      src="https://example.com/bulbasaur.png"
    />
    <div
      class="pokemon-text-container"
    >
      <h2
        class="h2"
      >
         
        bulbasaur
         
      </h2>
      <span
        class="pokemon-desription"
      >
        A strange seed was planted on its back at birth.
      </span>
    </div>
  </div>
  <div
    class="error-button"
  >
    <button>
      Error Button 
    </button>
  </div>
</div>
`;

exports[`show spinner on initial mount 1`] = `
<div>
  <div
    class="top-container"
  >
    <input
      class="input"
      placeholder="Start your search"
      value=""
    />
    <button>
       Search 
    </button>
  </div>
  <div
    class="loading"
  />
   
  <div
    class="message"
  >
    No Pokemons found. Please try a new search.
  </div>
  <div
    class="error-button"
  >
    <button>
      Error Button 
    </button>
  </div>
</div>
`;
